--- a/about_iccr_da.html
+++ b/about_iccr_da.html
@@ -35,12 +35,34 @@
     <div class="row row-content">
       <div class="text-center col-12 col-sm-12 col-md-12 img-fluid">
         <img src="gallery/DTlogo.png" alt="iccrda_logo" style="display:block;margin: 0 auto;" class="img-fluid img-KIITlogo">
+        <img src="gallery/raj.png" alt="iccrda_logo" style="display:block;margin: 0 auto;" class="img-fluid img-KIITlogo">
       </div>
       <div class="col-12 col-sm-12 col-md-12 text-center">
         <h1 class="text-center mt-4" style="font-size:55px;">About University</h1>
       </div>
       <!-- <div class="container"><img src="gallery/duytancampus.jpg" alt=""></div> -->
       <div class="col-12 col-sm-12 col-md-12 text-center">
+        <p class=" justify-content-center"
+        style="font-size: 20px; text-align:justify; text-justify:inter-word;font-weight:500;">The School of Open Learning [a part of the Campus of Open Learning] formerly known as The School of Correspondence Courses and Continuing Education, 
+        established under the University of Delhi in 1962, is a pioneer Institution in the field of Distance 
+        Education in India. The country witnessed the beginning of an alternate mode of education when the 
+        School started with a modest admission of 900 students in 1962. The School enrolled more than two 
+        lakhs students in the Academic Session 2006-2007. On many occasions our students have been toppers 
+        in various disciplines. The admission process for various courses in the School is governed by the
+         norms established by the University of Delhi. The examination is also conducted by the University
+          of Delhi. The University of Delhi confers the degree to the students of the School as it does in 
+          the case of its other constituent colleges. There is no differentiation in the course curriculum 
+          followed by the School of Open Learning and other constituent colleges and Departments of the 
+          University of Delhi. In an effort to reach out to a larger number of students the school is in
+           the process of opening up Study Center in the Eastern and the Western part of the National 
+           Capital Region of Delhi. The School offers Undergraduate/ Postgraduate Degree courses in the 
+           subjects of Arts/Humanities and Commerce. The medium of instruction is primarily through well
+           - prepared printed course material which is distributed by mail to all the enrolled students.
+            This is also supplemented through Personal Contact Program conducted for the benefit of students
+             at various study centers run by the School. An experienced faculty is always available at the 
+             main campus for academic interaction with students. The School offers learning through the
+              distance education mode which is a viable alternative for students who need a flexible medium
+               of instruction to attain higher education and vocational skills. .</p>
         <p class=" justify-content-center"
           style="font-size: 20px; text-align:justify; text-justify:inter-word;font-weight:500;">Duy Tan University is
           located in the heart of sunny Danang, on the Pacific Ocean. The University has steadily developed, sharing its
