--- a/conference_venue.html
+++ b/conference_venue.html
@@ -44,8 +44,8 @@
         <img src="gallery/duytancampus.jpg" alt="location image" class="img-fluid" width="300" height="400" style="border-radius: 10px;box-shadow:2px 2px  5px gray">
       </div>
       <div class="col-12">
-        <p style="font-size:20px;margin-top: 15px;"> <span style="font-weight: bold;">Address:</span> Duy Tan
-          University, Da Nang, <span style="font-weight: bold;">Vietnam </span></p>
+        <p style="font-size:20px;margin-top: 15px;"> <span style="font-weight: bold;">Address:</span> Shaheed Rajguru University
+          of Applied Sciences <span style="font-weight: bold;">Delhi,India </span></p>
         <p style="font-size: 20px;" class="text-info"><span style="font-weight:bold;color:black">Email:</span>
           iccrda.congress@gmail.com </p>
       </div>
