--- a/about_iccr_da.html
+++ b/about_iccr_da.html
@@ -35,7 +35,7 @@
     <div class="row row-content">
       <div class="text-center col-12 col-sm-12 col-md-12 img-fluid">
         <img src="gallery/DTlogo.png" alt="iccrda_logo" style="display:block;margin: 0 auto;" class="img-fluid img-KIITlogo">
-        <img src="../ICCRDA-2024/raj.png" alt="iccrda_logo" style="display:block;margin: 0 auto;" class="img-fluid img-KIITlogo">
+        <img src="gallery/raj.png" alt="iccrda_logo" style="display:block;margin: 0 auto;" class="img-fluid img-KIITlogo">
       </div>
       <div class="col-12 col-sm-12 col-md-12 text-center">
         <h1 class="text-center mt-4" style="font-size:55px;">About University</h1>
