--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="carousel slide" id="mycarousel" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
-        <div class="carousel-item img-fluid zoom">
+        <div class="carousel-item img-fluid active">
           <img class="d-block img-fluid" src="gallery/duuni.jpg" alt="fourthslide"
             style="width:100%;border-radius:10px; height:40vw;">
 
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="carousel-item img-fluid zoom">
-          <img class="d-block img-fluid" src="gallery/raju.png" alt="fourthslide"
+          <img class="d-block img-fluid" src="gallery/raju.jpg" alt="fourthslide"
             style="width:100%;border-radius:10px; height:40vw;">
 
           <div class="carousel-caption">
@@ -115,6 +115,8 @@
           <li data-target="mycarousel" data-slide-to="1"></li>
           <li data-target="mycarousel" data-slide-to="2"></li>
           <li data-target="mycarousel" data-slide-to="3"></li>
+          <li data-target="mycarousel" data-slide-to="4"></li>
+          <li data-target="mycarousel" data-slide-to="5"></li>
         </ol>
         <a href="#mycarousel" class="carousel-control-prev" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon"></span>
