--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <div class="carousel slide" id="mycarousel" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
-        <div class="carousel-item img-fluid active">
+        <div class="carousel-item active zoom">
           <img class="d-block img-fluid" src="gallery/duuni.jpg" alt="fourthslide"
             style="width:100%;border-radius:10px; height:40vw;">
 
@@ -76,7 +76,7 @@
             <h3 class="image-title">Shaheed Rajguru College of Applied Sciences, Delhi</h3>
           </div>
         </div>
-        <div class="carousel-item active zoom">
+        <div class="carousel-item img-fluid zoom">
           <center><img class="d-block img-fluid"
               src="https://images.pexels.com/photos/1209978/pexels-photo-1209978.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
               alt="firstslide" style="width:100%;border-radius:10px; height:40vw;"></center>
@@ -115,8 +115,6 @@
           <li data-target="mycarousel" data-slide-to="1"></li>
           <li data-target="mycarousel" data-slide-to="2"></li>
           <li data-target="mycarousel" data-slide-to="3"></li>
-          <li data-target="mycarousel" data-slide-to="4"></li>
-          <li data-target="mycarousel" data-slide-to="5"></li>
         </ol>
         <a href="#mycarousel" class="carousel-control-prev" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon"></span>
